# parallel_computing_misis_nurgaliev_r_d_bpm_22_po_1

./: README.md
lab01/: .gitignore  CMakeLists.txt  README.md
lab01/results/: raw_measurements.csv  statistics.csv
lab01/scripts/: analyze.py
lab01/src/: csv_writer.cpp  csv_writer.hpp  main.cpp  matrix.cpp  matrix.hpp  timers.cpp  timers.hpp
lab02/: .gitignore  CMakeLists.txt  README.md
lab02/include/: algorithms.hpp  benchmark.hpp  matrix.hpp  utils.hpp
lab02/src/: algorithms.cpp  benchmark.cpp  main.cpp  matrix.cpp  utils.cpp
lab03/: CMakeLists.txt  README.md  cpuid_report.txt
lab03/include/: cpu_info.h  cpuid_utils.h  formatter.h
lab03/src/: cpuid_utils.cpp  formatter.cpp  main.cpp
lab04/: .gitignore  CMakeLists.txt  README.md
lab04/include/: benchmark.h  csv_writer.h  utils.h
lab04/results/: results.csv
lab04/scripts/: plot.py
lab04/src/: benchmark.cpp  csv_writer.cpp  main.cpp  utils.cpp
lab05/: .gitignore  CMakeLists.txt  README.md  results_debug.txt  results_release.txt
lab05/include/: aligned_allocator.h  scaling.h  timer.h
lab05/src/: main.cpp  scaling.cpp
lab07/: CMakeLists.txt  README.md
lab07/include/: image.h  pgm.h  scharr.h  timer.h
lab07/results/: generated_input.pgm  simd_output.pgm
lab07/src/: main.cpp  pgm.cpp  scharr_scalar.cpp  scharr_simd_avx2.cpp
lab08/: .gitignore  CMakeLists.txt  README.md
lab08/include/: cuda_utils.hpp
lab08/results/: lab83_bandwidth.csv  lab84_block_scan.csv  lab84_launch_scan.csv  lab84_summary.csv  lab84_unroll_scan.csv
lab08/src/lab81/: main.cpp  vector_ops.cu
lab08/src/lab82/: main.cpp  warmup.cu
lab08/src/lab83/: main.cpp
lab08/src/lab84/: main.cpp  matmul_kernels.cu
